Region servers used wrong IP

--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Region/GridCommon.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Region/GridCommon.ini
@@ -77,13 +77,13 @@ AssetLoaderArgs="assets/AssetSets.xml"
 ;
 ; Change this to your grid-wide asset server.  Do not add a slash to the end of any of these addresses.
 ;
-AssetServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+AssetServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 [InventoryService]
 ;
 ; Change this to your grid-wide inventory server
 ;
-InventoryServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+InventoryServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 MaxRetries = 2
 ;
@@ -100,7 +100,7 @@ GridInfoURI="${Const|BaseURL}:${Const|PublicPort}"
 ;
 ; Change this to your grid-wide grid server
 ;
-GridServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+GridServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 AllowHypergridMapSearch = true
 ;
@@ -121,7 +121,7 @@ Gatekeeper="${Const|BaseURL}:${Const|PublicPort}"
 ;LocalServiceModule = "OpenSim.Services.Connectors.dll:EstateDataRemoteConnector"
 ;
 [EstateService]
-EstateServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+EstateServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 [Messaging]
 ;
@@ -135,47 +135,47 @@ Gatekeeper="${Const|BaseURL}:${Const|PublicPort}"
 ;
 ; Change this to your grid-wide grid server
 ;
-AvatarServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+AvatarServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 [AgentPreferencesService]
 ;
 ;
 ; Change this to your grid-wide avatar prefs server
 ;
-AgentPreferencesServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+AgentPreferencesServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 [PresenceService]
 ;
 ;
 ; Change this to your grid-wide presence server
 ;
-PresenceServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+PresenceServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 [UserAccountService]
 ;
 ; Change this to your grid-wide user accounts server
 ;
-UserAccountServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+UserAccountServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 [GridUserService]
 ;
 ; Change this to your grid-wide user accounts server
 ;
-GridUserServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+GridUserServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 [AuthenticationService]
 ;
 ;
 ; Change this to your grid-wide authentication server
 ;
-AuthenticationServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+AuthenticationServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 [FriendsService]
 ;
 ;
 ; Change this to your grid-wide friends server
 ;
-FriendsServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+FriendsServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 [HGInventoryAccessModule]
 ;
@@ -236,12 +236,12 @@ HomeURI="${Const|BaseURL}:${Const|PublicPort}"
 ;
 ; === HG ONLY ===
 ; Change this to your user agent server (HG robust)
-;;UserAgentServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+;;UserAgentServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 UserAgentServerURI="${Const|BaseURL}:${Const|PublicPort}"
 ;
 [MapImageService]
 ;
-MapImageServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+MapImageServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 [AuthorizationService]
 ;
@@ -255,7 +255,7 @@ MapImageServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 ; END
 
 [MuteListService]
-MuteListServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+MuteListServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;
 [WebStats]
 enabled=True
