--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Region/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Region/OpenSim.ini
@@ -45,14 +45,14 @@
 [Const]
 ;
 ; Automatically changed by Dreamworld - do not change this
-http_listener_port=8028
+http_listener_port=
 ;
 ; Automatically changed by Dreamworld - do not change this
 ;# used by the one-exe-per-instance logic. This becomes the folder for the regions file.
-RegionFolderName=Test
+RegionFolderName=
 ;
 ;# {BaseHostname} {} {BaseHostname} {"example.com" "127.0.0.1"} "127.0.0.1"
-BaseHostname=192.168.2.139
+BaseHostname=
 ;
 ; Automatically changed by Dreamworld - do not change this
 ;# {BaseURL} {} {BaseURL} {"http://${Const|BaseHostname}} "http://${Const|BaseHostname}"
@@ -60,31 +60,32 @@ BaseURL=http://${Const|BaseHostname}
 ;
 ; Automatically changed by Dreamworld - do not change this
 ;# {PrivURL} {} {PrivURL} {127.0.0.1} "127.0.0.1"
-PrivURL=http://192.168.2.139
+PrivURL=
 ;
 ; Automatically changed by Dreamworld - do not change this
 ;# {PublicPort} {} {PublicPort} {8002} "8002"
-PublicPort=8002
+PublicPort=
 ;
 ; Automatically changed by Dreamworld - do not change this
 ;# {PrivatePort} {} {PrivatePort} {8003} "8003"
-PrivatePort=8003
+PrivatePort=
 ;
 ; Automatically changed by Dreamworld - do not change this
 ;# Grid Name for Wifi to show
-GridName=DreamGrid
+GridName=
 ;
 ; Automatically changed by Dreamworld - do not change this
 ;# Dreamworld runs a listener on this port to run diagnostics. Dreamgrid listens for regions LOGINS enabled
 ;# {DiagnosticsPort} {} {DiagnosticsPort} {8001} "8001"
-DiagnosticsPort=8001
+DiagnosticsPort=
 ;
 ; Automatically changed by Dreamworld - do not change this
-ApachePort=80
+;# {AoachePort} {} {ApachePort} {80} "80"
+ApachePort=
 ;
 [Startup]
 ;
-SmartStart=True
+SmartStart=
 ;
 ;# {ConsolePrompt} {} {ConsolePrompt} {} "Region (\R) "
 ;; Console prompt
@@ -572,7 +573,7 @@ SMTP_SERVER_PASSWORD=Gmail password
 ;
 ;must be started with parameter "-console=rest". Furthermore, the configuration options
 ;
-ConsoleAllowedOrigin=${Const|BaseURL}:${Const|PublicPort}
+ConsoleAllowedOrigin=${Const|PrivURL}:${Const|PrivatePort}
 ;
 ;
 ;# {ConsoleUser} {} {User name for console account} {}
@@ -842,7 +843,7 @@ port=0
 ;# {access_password} {enabled:true} {Password for the remote admin interface} {}
 ;; This password is required to make any XMLRPC call (should be set as
 ;; the "password" parameter)
-access_password=gandalf
+access_password=
 ;
 ;# {access_ip_addresses} {enabled:true} {List the IP addresses allowed to call RemoteAdmin?} {}
 ;; List the IP addresses allowed to call RemoteAdmin
