--- a/OutworldzFiles/Opensim/bin/Wifi.ini
+++ b/OutworldzFiles/Opensim/bin/Wifi.ini
@@ -11,9 +11,9 @@ Enabled=True
 
 ;; Set this to a port, possibly using one of the ports defined in the host config file
 ;ServerPort = 8002 or ${Const|PublicPort}
-GridName=Gandalf
-LoginURL=http://smartstart.outworldz.net:8002
-WebAddress=http://smartstart.outworldz.net:8002
+GridName=DreamGrid
+LoginURL=http://192.168.2.139:8002
+WebAddress=http://192.168.2.139:8002
 
 ;; The Wifi Administrator account
 AdminFirst=Wifi
@@ -75,5 +75,5 @@ SmtpPassword=Some Password
 ;; base folder "bin" can be accessed via path <WebAddress>/bin/data/, e.g.
 ;; http://localhost:8002/bin/data/prototype.js.
 ServePath_BinData="data, /bin/data"
-AdminPassword=vzdwMdG4PO2z4tl
+AdminPassword=OUeoIFVnPIBCxnP
 HomeLocation=Welcome/128/128/24
