--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -303,6 +303,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Apache.vb" />
+    <Compile Include="Backup.vb" />
     <Compile Include="Backups.vb" />
     <Compile Include="BreakPoint.vb" />
     <Compile Include="Clear_Cache.vb" />
