Simply Get Window Handle

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 Outworldzfiles/FreeSwitch
 Outworldzfiles/Autobackup
-#Installer_Src/packages/
-#Updater_Src/Updater/packages/
+Installer_Src/packages/
+Updater_Src/Updater/packages/
 en
 ca
 cs
