+MaxDrawDistance +Console commands run every so often +Trees

--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -85,6 +85,19 @@ ApachePort=80
 [Startup]
 ;
 SmartStart=True
+;
+; the default view range. Viewers override this ( no major effect still )
+DefaultDrawDistance = 1024
+
+; limit the maximum view range ( no effect still (does limit MaxRegionsViewDistance) )
+MaxDrawDistance = 1024
+
+; Other regions visibility depends on avatar position and view range
+; the view range considered is limited the maximum and minimum distances
+; if you set MaxRegionsViewDistance to zero, other regions will not be seen, and crossing to them is disabled
+MaxRegionsViewDistance = 1024
+MinRegionsViewDistance = 96
+
 
 ;# {ConsolePrompt} {} {ConsolePrompt} {} "Region (\R) "
 ;; Console prompt
@@ -356,6 +369,13 @@ economymodule=BetaGridLikeMoneyModule
 ; Being a integer multiple of it may reduce some jitter in reported physics FPS.
 ; changing this value, you need to change some of the following *EveryNFrames so their actions timing remains the same
 FrameTime=0.0909090909090909
+;
+; Console commands run every so often
+timer_Script = "debug.txt"
+
+; timer_Script time interval (default 20 min)
+; timer_Interval = 1200
+timer_Interval=1200
 ;
 [RegionReady]
 ;
@@ -1598,5 +1618,20 @@ regions = ""
 ;
 [ClientStack.LindenUDP]
 SupportViewerObjectsCache=True
-
-
+;
+;
+[Trees]
+; enable the trees module. default true
+enabled = true
+  
+; active_trees allows module to change its trees in time.
+; some will be deleted, others created and rest may grow
+; default is false. You can change it with console comand tree active true|false later
+active_trees = false
+; the trees change execution time rate (in ms)
+update_rate = 1000
+; allow the trees to grow.
+; DANGER
+; this option causes high network use on the order of
+; NumberOfTrees * NumberAvatars * 1000 / update_rate udp packets per second
+allowGrow = false
