Trees! Terrains! Log viewer not jhowing log due o missing slash Increase TextureSendLimit Avatar PersistBakedTextures Mesh physics altered Iniial terrain is flat, not pinhead ReuseDynamicTextures = true

--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -30,7 +30,7 @@ http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://www.outworldz.com
+BaseURL=http://192.168.2.139
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
@@ -54,7 +54,7 @@ ApachePort=80
 
 ;
 ;Password from DYN DNS
-MachineID=164618784
+MachineID=140540416
 
 ;
 ; * The startup section lists all the connectors to start up in this server
@@ -377,6 +377,17 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;;
 ; START  <= Leave this line
 Region_Welcome=DefaultRegion,DefaultHGRegion
+Region_Sim_Surround_1015-1007=FallbackRegion
+Region_Sim_Surround_1016-1007=FallbackRegion
+Region_Sim_Surround_1017-1007=FallbackRegion
+Region_Sim_Surround_1015-1008=FallbackRegion
+Region_Sim_Surround_1015-1009=FallbackRegion
+Region_Sim_Surround_1015-1010=FallbackRegion
+Region_Sim_Surround_1016-1010=FallbackRegion
+Region_Sim_Surround_1017-1008=FallbackRegion
+Region_Sim_Surround_1017-1009=FallbackRegion
+Region_Sim_Surround_1017-1010=FallbackRegion
+Region_Test_Region=FallbackRegion
 
 ; END  <= Leave this line
 ;; Allow Hyperlinks to be created at the console
@@ -533,7 +544,7 @@ HGInventoryServicePlugin="HGInventoryService@OpenSim.Services.HypergridService.d
 ;; end hypergrid
 ; Ask co-operative viewers to use a different currency name
 ;; Set by Dreamgrid
-Currency=$
+Currency=G$
 
 ;; Set minimum fee to publish classified
 ClassifiedFee=0
