--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -1641,6 +1641,21 @@
   <ItemGroup>
     <None Include="Resources\map_delete.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Randomn.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\AI.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\flatland.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Cypress1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Cypress2.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
