allow viewers to look further

--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -84,20 +84,20 @@ ApachePort=80
 ;
 [Startup]
 ;
-SmartStart=True
+SmartStart=False
 ;
 ; the default view range. Viewers override this ( no major effect still )
-DefaultDrawDistance = 1024
+;DefaultDrawDistance = 1024
 
 ; limit the maximum view range ( no effect still (does limit MaxRegionsViewDistance) )
-MaxDrawDistance = 1024
+;MaxDrawDistance = 1024
 
 ; Other regions visibility depends on avatar position and view range
 ; the view range considered is limited the maximum and minimum distances
 ; if you set MaxRegionsViewDistance to zero, other regions will not be seen, and crossing to them is disabled
-MaxRegionsViewDistance = 1024
-MinRegionsViewDistance = 96
 
+;MaxRegionsViewDistance = 1024
+;MinRegionsViewDistance = 1024
 
 ;# {ConsolePrompt} {} {ConsolePrompt} {} "Region (\R) "
 ;; Console prompt
@@ -721,6 +721,16 @@ shard="OpenSim"
 ;
 
 [ClientStack.LindenCaps]
+
+; TextureSendLimit determines how many packets will be put on
+; the lludp outgoing queue each cycle. Like the settings above, this
+; is a balance between responsiveness to priority updates and
+; total throughput. Higher numbers will give a better
+; throughput at the cost of reduced responsiveness to client
+; priority changes or transfer aborts
+; default = 20
+TextureSendLimit = 50
+
 ;; For the long list of capabilities, see OpenSimDefaults.ini
 ;; Here are the few ones you may want to change. Possible values
 ;; are:
@@ -736,7 +746,30 @@ Cap_AvatarPickerSearch="localhost"
 Cap_GetDisplayNames="localhost";
 ;
 SupportViewerObjectsCache=True
+''
+[Appearance]
+; Persist avatar baked textures
+; Persisting baked textures can speed up login and region border
+; crossings especially with large numbers of users, though it
+; will store potentially large numbers of textures in your asset
+; database
+PersistBakedTextures = true
 
+; Control the delay before appearance is sent to other avatars and
+; saved in the avatar service. Attempts to limit the impact caused
+; by the very chatty dialog that sets appearance when an avatar
+; logs in or teleports into a region; values are in seconds
+DelayBeforeAppearanceSave = 5
+DelayBeforeAppearanceSend = 2
+
+; If true, avatar appearance information is resent to other avatars in the simulator every 60 seconds.
+; This may help with some situations where avatars are persistently grey, though it will not help
+; in other situations (e.g. appearance baking failures where the avatar only appears as a cloud to others).
+ResendAppearanceUpdates = false
+
+; Turning this on responds to CachedTexture packets to possibly avoid rebaking the avatar
+; on every login
+ReuseTextures = false
 ;
 [SimulatorFeatures]
 ;# {SearchServerURI} {} {URL of the search server} {}
@@ -829,6 +862,37 @@ MuteListURL=${Const|BaseURL}:${Const|ApachePort}/MuteList/Mutelist.php
 ForwardOfflineGroupMessages=true
 ;
 ;
+
+[Mesh]
+; enable / disable mesh asset uploads
+; mesh asset must conform to standard mesh format, with OpenSim extensions
+; default is true
+AllowMeshUpload = true
+
+; Minimum user level required to upload meshes
+;LevelUpload = 0
+
+; support meshes on physics
+UseMeshiesPhysicsMesh = true
+
+;support convex shape type on normal prims
+; (ubOde only)
+ConvexPrims = true
+
+;support convex shape type on sculpts
+; (ubOde only)
+ConvexSculpts = true
+
+; mesh cache settings:
+; (ubOde only)
+; do cache (keep true)
+MeshFileCache = true
+; cache folder name relative to bin/ or absolute path
+MeshFileCachePath = MeshCache
+MeshFileCacheDoExpire = true
+MeshFileCacheExpireHours = 48
+
+
 [BulletSim]
 ;
 ;
@@ -1391,8 +1455,13 @@ Enabled=true
 [Terrain]
 ;
 ;# {InitialTerrain} {} {Initial terrain type} {pinhead-island flat} pinhead-island
-; InitialTerrain = "pinhead-island"
-;
+InitialTerrain = "flat"
+
+; If 'true' each avatar is only sent terrain patches within their view distance
+; This also changes the region terrain loading from 'lawn mower' to ordered around
+;     the avatar outward.
+SendTerrainUpdatesByViewDistance = True
+
 ;
 [LandManagement]
 ;
@@ -1635,3 +1704,22 @@ update_rate = 1000
 ; this option causes high network use on the order of
 ; NumberOfTrees * NumberAvatars * 1000 / update_rate udp packets per second
 allowGrow = false
+
+
+[Textures]
+; If true, textures generated dynamically (i.e. through osSetDynamicTextureData() and similar OSSL functions) are reused where possible
+; Chiefly, reuse occurs if a texture has already been generated with identical data and settings, and that texture contains no dynamic components
+; (e.g. images pulled from an external HTTP address).
+; Reusing previously generated textures results in a much faster update on the viewer but may cause issues if the viewer didn't receive all resolutions of the texture.
+; Currently, it will also increase asset cache use since temporary dynamic textures are no longer deleted.
+; Hence, currently considered experimental.
+; Default is false.
+ReuseDynamicTextures = true
+
+; If true, then textures generated dynamically that have a low data size relative to their pixel size are not reused
+; This is to workaround an apparent LL 3.3.4 and earlier viewer bug where such textures are not redisplayed properly when pulled from the viewer cache.
+; Only set this to true if you are sure that all the viewers using your simulator will not suffer from this problem.
+; This setting only has an affect if ReuseDynamicTextures = true
+; Default is false
+ReuseDynamicLowDataTextures = false
+
