--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Region/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Region/OpenSim.ini
@@ -1521,10 +1521,10 @@ LandServiceConnector="True"
 [Gloebit]
 Enabled=True
 GLBEnvironment=production
-GLBKey=16335189-57cf-426d-9dab-ac14e941f500
-GLBSecret=87da336e-b962-4c9c-91e5-dc72154fc2a0
-GLBOwnerName=Roddie Macchi
-GLBOwnerEmail=roddiemacchi@hotmail.com
+GLBKey=
+GLBSecret=
+GLBOwnerName=
+GLBOwnerEmail=
 GLBSpecificConnectionString="Data Source=127.0.0.1;Database=opensim;Port=3306;User ID=opensimuser;Password=opensimpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
 GLBShowNewSessionAuthIM=True
 GLBShowNewSessionPurchaseIM=False
