--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -54,7 +54,7 @@ ApachePort=80
 
 ;
 ;Password from DYN DNS
-MachineID=140540416
+MachineID=324030400
 
 ;
 ; * The startup section lists all the connectors to start up in this server
@@ -377,17 +377,23 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;;
 ; START  <= Leave this line
 Region_Welcome=DefaultRegion,DefaultHGRegion
-Region_Sim_Surround_1015-1007=FallbackRegion
-Region_Sim_Surround_1016-1007=FallbackRegion
-Region_Sim_Surround_1017-1007=FallbackRegion
-Region_Sim_Surround_1015-1008=FallbackRegion
-Region_Sim_Surround_1015-1009=FallbackRegion
-Region_Sim_Surround_1015-1010=FallbackRegion
-Region_Sim_Surround_1016-1010=FallbackRegion
-Region_Sim_Surround_1017-1008=FallbackRegion
-Region_Sim_Surround_1017-1009=FallbackRegion
-Region_Sim_Surround_1017-1010=FallbackRegion
-Region_Test_Region=FallbackRegion
+Region_Allerster_Labyrinth=FallbackRegion
+Region_Chastershire_Castle=FallbackRegion
+Region_Corlet_Falls=FallbackRegion
+Region_The_Expanse_of_Wareval=FallbackRegion
+Region_The_Mangrove_of_Kapusstall=FallbackRegion
+Region_The_Waves_of_Minirey=FallbackRegion
+Region_Wharf_Of_Morincester=FallbackRegion
+Region_Whitestar_Hideaway=FallbackRegion
+Region_Barren_Wilderness=FallbackRegion
+Region_Judgment_Lookout=FallbackRegion
+Region_The_Fountain_of_Afternoons=FallbackRegion
+Region_Harbor_Of_Pelduff=FallbackRegion
+Region_Humsons_Slopes=FallbackRegion
+Region_Ruxmont=FallbackRegion
+Region_Cliffver_Plains=FallbackRegion
+Region_Mighty_Frontier=FallbackRegion
+Region_The_Waters_of_Vegrehill=FallbackRegion
 
 ; END  <= Leave this line
 ;; Allow Hyperlinks to be created at the console
@@ -544,7 +550,7 @@ HGInventoryServicePlugin="HGInventoryService@OpenSim.Services.HypergridService.d
 ;; end hypergrid
 ; Ask co-operative viewers to use a different currency name
 ;; Set by Dreamgrid
-Currency=G$
+Currency=$
 
 ;; Set minimum fee to publish classified
 ClassifiedFee=0
