--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -932,13 +932,13 @@ port=${Const|http_listener_port}
 ;# {access_password} {enabled:true} {Password for the remote admin interface} {}
 ;; This password is required to make any XMLRPC call (should be set as
 ;; the "password" parameter)
-access_password=139826304
+access_password=
 ;
 ;# {access_ip_addresses} {enabled:true} {List the IP addresses allowed to call RemoteAdmin?} {}
 ;; List the IP addresses allowed to call RemoteAdmin
 ;; If access_ip_addresses isn't set, then all IP addresses can access RemoteAdmin.
 ;; access_ip_addresses = 0.0.0.0, 0.0.0.0 ...
-access_ip_addresses="127.0.0.1"
+;access_ip_addresses=${Const|PrivURL}, 127.0.0.1
 ;
 ;
 ;# {create_region_enable_voice} {enabled:true} {Enable voice for newly created regions?} {true false} false
@@ -960,7 +960,7 @@ access_ip_addresses="127.0.0.1"
 ;; enabled_methods = admin_broadcast|admin_save_oar|admin_save_xml
 ;; if this parameter is not specified but enabled = true, all methods
 ;; will be available
-enabled_methods=admin_console_command|admin_shutdown|admin_teleport_agent|admin_broadcast|admin_dialog
+;enabled_methods=admin_console_command|admin_shutdown|admin_teleport_agent|admin_broadcast|admin_dialog
 ;
 ;; specify the default appearance for an avatar created through the remote
 ;; admin interface
