Terrain fills and Estate counter Estates set to "Sim Surround"

--- a/OutworldzFiles/Opensim/bin/Estates/Estates.ini
+++ b/OutworldzFiles/Opensim/bin/Estates/Estates.ini
@@ -12,9 +12,9 @@
 [SimSurround]
 
 ; *
-; * You MUST change this! It will NOT be done for you!
+; * You MUST change this! It will NOT be done for you!  11111111-1111-0000-0000-000100bba000 is Mr. Opensim
 ; *
-Owner = 11111111-2222-3333-4444-555555555555
+Owner = 11111111-1111-0000-0000-000100bba000
 
 ; Use 0 For Auto increment ID (Recommended). When specifying a specific id, remember it can not be less than 100
 EstateID = 1999
