--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -54,7 +54,7 @@ ApachePort=80
 
 ;
 ;Password from DYN DNS
-MachineID=324030400
+MachineID=571470016
 
 ;
 ; * The startup section lists all the connectors to start up in this server
@@ -377,23 +377,6 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;;
 ; START  <= Leave this line
 Region_Welcome=DefaultRegion,DefaultHGRegion
-Region_Allerster_Labyrinth=FallbackRegion
-Region_Chastershire_Castle=FallbackRegion
-Region_Corlet_Falls=FallbackRegion
-Region_The_Expanse_of_Wareval=FallbackRegion
-Region_The_Mangrove_of_Kapusstall=FallbackRegion
-Region_The_Waves_of_Minirey=FallbackRegion
-Region_Wharf_Of_Morincester=FallbackRegion
-Region_Whitestar_Hideaway=FallbackRegion
-Region_Barren_Wilderness=FallbackRegion
-Region_Judgment_Lookout=FallbackRegion
-Region_The_Fountain_of_Afternoons=FallbackRegion
-Region_Harbor_Of_Pelduff=FallbackRegion
-Region_Humsons_Slopes=FallbackRegion
-Region_Ruxmont=FallbackRegion
-Region_Cliffver_Plains=FallbackRegion
-Region_Mighty_Frontier=FallbackRegion
-Region_The_Waters_of_Vegrehill=FallbackRegion
 
 ; END  <= Leave this line
 ;; Allow Hyperlinks to be created at the console
@@ -910,11 +893,11 @@ SMTP_SERVER_PASSWORD=Some Password
 ;; Set to True to enable Smart Start
 ;; Set by Dreamgrid
 [AutoLoadTeleport]
-Enabled=False
+Enabled=True
 
 ;; For Joomla/jOpensim
 [CapsService]
 AssetService="OpenSim.Services.FSAssetService.dll:FSAssetConnector"
 
 [SmartStart]
-Enabled=False
+Enabled=True
