Delete log files based on the keep for days

--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -54,7 +54,7 @@ ApachePort=80
 
 ;
 ;Password from DYN DNS
-MachineID=571470016
+MachineID=185923104
 
 ;
 ; * The startup section lists all the connectors to start up in this server
@@ -893,11 +893,11 @@ SMTP_SERVER_PASSWORD=Some Password
 ;; Set to True to enable Smart Start
 ;; Set by Dreamgrid
 [AutoLoadTeleport]
-Enabled=True
+Enabled=False
 
 ;; For Joomla/jOpensim
 [CapsService]
 AssetService="OpenSim.Services.FSAssetService.dll:FSAssetConnector"
 
 [SmartStart]
-Enabled=True
+Enabled=False
