--- a/OutworldzFiles/Opensim/bin/config-include/osslEnable.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/osslEnable.ini
@@ -127,8 +127,8 @@
   Allow_osGetGridNick =             true
   Allow_osGetNumberOfAttachments =  ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osGetRegionStats =          ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
-  Allow_osGetSimulatorMemory =      ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
-  Allow_osGetSimulatorMemoryKB =    ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
+  Allow_osGetSimulatorMemory =      true
+  Allow_osGetSimulatorMemoryKB =    true
   Allow_osMessageAttachments =      ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osReplaceAgentEnvironment = ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osSetSpeed =                true
