--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Region/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Region/OpenSim.ini
@@ -849,7 +849,7 @@ access_password=
 ;; List the IP addresses allowed to call RemoteAdmin
 ;; If access_ip_addresses isn't set, then all IP addresses can access RemoteAdmin.
 ;; access_ip_addresses = 0.0.0.0, 0.0.0.0 ...
-access_ip_addresses="127.0.0.1"
+; access_ip_addresses="127.0.0.1"
 ;
 ;
 ;# {create_region_enable_voice} {enabled:true} {Enable voice for newly created regions?} {true false} false
