--- a/OutworldzFiles/Opensim/bin/Estates/Estates.ini
+++ b/OutworldzFiles/Opensim/bin/Estates/Estates.ini
@@ -1,5 +1,5 @@
 ; * This is an example estate config file.
-; * 
+; *
 ; * If a Region is loaded without an estate, OpenSimulator will ask you configuration questions to create or join an existing estate.
 ; * So there is no need to change this file directly, it is only for reference.
 ; * However, if you prefer you can also copy this file to Estates.ini and appropriately change the parameters below.
@@ -8,13 +8,12 @@
 ; * You can add multiple estates into one file or make one file per estate
 ; * The section name is the estate name
 ; *
-
 [SimSurround]
 
 ; *
-; * You MUST change this! It will NOT be done for you!  11111111-1111-0000-0000-000100bba000 is Mr. Opensim
+; * Set in Dreamgrid's Smart Start Screen
 ; *
-Owner = 11111111-1111-0000-0000-000100bba000
+Owner=
 
 ; Use 0 For Auto increment ID (Recommended). When specifying a specific id, remember it can not be less than 100
-EstateID = 1999
+EstateID=0
