--- a/OutworldzFiles/Apache/conf/extra/httpd-ssl.conf
+++ b/OutworldzFiles/Apache/conf/extra/httpd-ssl.conf
@@ -69,7 +69,7 @@ SSLProtocol all -SSLv2 -SSLv3 -TLSv1 -TLSv1.1
 #   General setup for the virtual host
 
 #Set by Dreamgrid
-ServerName smartstart.outworldz.net
+ServerName www.outworldz.com
 
 #
 DocumentRoot "${SRVROOT}/htdocs"
