Allow trees to grow

--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -1703,7 +1703,7 @@ update_rate = 1000
 ; DANGER
 ; this option causes high network use on the order of
 ; NumberOfTrees * NumberAvatars * 1000 / update_rate udp packets per second
-allowGrow = false
+allowGrow = true
 
 
 [Textures]
