--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -580,7 +580,7 @@
     <Compile Include="IP.vb" />
     <Compile Include="jOpensim.vb" />
     <Compile Include="Logging.vb" />
-    <Compile Include="My Project\Builder.vb" />
+    <Compile Include="Builder.vb" />
     <Compile Include="My Project\Resources.cz.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
