--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/GridCommon.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/GridCommon.ini
@@ -200,6 +200,15 @@ UserAgentServerURI="${Const|BaseURL}:${Const|PublicPort}"
 MapImageServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 ;
 [AuthorizationService]
+;
+; If you have regions with access restrictions
+; specify them here using the convention
+; Region_<Region_Name> = <flags>
+; Valid flags are:
+; DisallowForeigners -- HG visitors not allowed
+; DisallowResidents -- only Admins and Managers allowed
+; START
+; END
 
 [MuteListService]
 MuteListServerURI="${Const|PrivURL}:${Const|PrivatePort}"
