--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -54,7 +54,7 @@ ApachePort=80
 
 ;
 ;Password from DYN DNS
-MachineID=538025792
+MachineID=424170784
 
 ;
 ; * The startup section lists all the connectors to start up in this server
@@ -376,83 +376,8 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; Set by Dreamgrid
 ;;
 ; START  <= Leave this line
-Region_Welcome=DefaultRegion,DefaultHGRegion
-Region_Arborbridge_Hills=FallbackRegion
-Region_Brotherhood_Sanctum=FallbackRegion
-Region_Echo_Garrison=FallbackRegion
-Region_Hellish_Savanna=FallbackRegion
-Region_Mount_Asnear=FallbackRegion
-Region_Stratchill_Pastures=FallbackRegion
-Region_The_Sanguine_Spring=FallbackRegion
-Region_Barrheller_Cay=FallbackRegion
-Region_Bedto_Grounds=FallbackRegion
-Region_Belland=FallbackRegion
-Region_Beresmiota_Brook=FallbackRegion
-Region_Berhead_Den=FallbackRegion
-Region_Burneside_Castle=FallbackRegion
-Region_Casry_Falls=FallbackRegion
-Region_Chashall_Wetlands=FallbackRegion
-Region_Drumsano_Park=FallbackRegion
-Region_Grand_Loch_Lookout=FallbackRegion
-Region_Kirgough_Haven=FallbackRegion
-Region_Muswood_Canal=FallbackRegion
-Region_Rossbridge_Pinnacle=FallbackRegion
-Region_Somerlisle_Canal=FallbackRegion
-Region_Staibsel=FallbackRegion
-Region_The_Carbon_Mountains=FallbackRegion
-Region_The_Explosive_Pinnacle=FallbackRegion
-Region_The_Gardens_Of_Dartliers=FallbackRegion
-Region_The_Gulf_of_Caslan=FallbackRegion
-Region_The_Waves_of_Cantermeuse=FallbackRegion
-Region_Wincroft_Grasslands=FallbackRegion
-Region_Windhollow=FallbackRegion
-Region_Winter_Nest=FallbackRegion
-Region_Winter's_Barracks=FallbackRegion
-Region_Albersack_Gardens=FallbackRegion
-Region_Kensingforte_Falls=FallbackRegion
-Region_Liberty_Falls=FallbackRegion
-Region_Mount_Votlis=FallbackRegion
-Region_Readtou_Seafront=FallbackRegion
-Region_The_Expanse_of_Marby=FallbackRegion
-Region_The_Ocean_of_Twilfil=FallbackRegion
-Region_Beauheller_Tributary=FallbackRegion
-Region_Berserker_Thicket_Tower=FallbackRegion
-Region_Chatsry_Archipelago=FallbackRegion
-Region_Croymark_Caverns=FallbackRegion
-Region_Dorbrook_Meadow=FallbackRegion
-Region_Guilris_Gardens=FallbackRegion
-Region_Hulmond_Range=FallbackRegion
-Region_Hunter_Rapids=FallbackRegion
-Region_Landing_Of_Outrior=FallbackRegion
-Region_Lonnach_Rapids=FallbackRegion
-Region_Loursard_Heights=FallbackRegion
-Region_Moonling=FallbackRegion
-Region_Niverfait_Falls=FallbackRegion
-Region_Noblewing_Haven=FallbackRegion
-Region_Taiwsto=FallbackRegion
-Region_The_Depths_of_Rugree=FallbackRegion
-Region_The_Domain_of_Blythefair=FallbackRegion
-Region_The_Domain_of_Waterlita=FallbackRegion
-Region_The_Sea_of_Pilval=FallbackRegion
-Region_The_Sea_of_Somermack=FallbackRegion
-Region_The_Waves_of_Golmere=FallbackRegion
-Region_Turtle_Bay_Wharf=FallbackRegion
-Region_Withered_Fields=FallbackRegion
-Region_Yubfun_Wild=FallbackRegion
-Region_Bloomssack_Ait=FallbackRegion
-Region_Oushukodel=FallbackRegion
-Region_Shernora_Grassland=FallbackRegion
-Region_The_Exhausted_Vertex=FallbackRegion
-Region_The_Gardens_Of_Bruderfair=FallbackRegion
-Region_The_Slough_of_Buxberry=FallbackRegion
-Region_Wayfield=FallbackRegion
-Region_Farmborg_Rapids=FallbackRegion
-Region_Mulpool_Falls=FallbackRegion
-Region_Plagate_Highlands=FallbackRegion
-Region_The_Depths_of_Torrey=FallbackRegion
-Region_The_Ocean_of_Latchbrook=FallbackRegion
-Region_Wakarock_Plaza=FallbackRegion
-Region_Wharf_Of_Ituside=FallbackRegion
+Region_2_2_2=Persistent
+Region_Welcome=DefaultRegion
 
 ; END  <= Leave this line
 ;; Allow Hyperlinks to be created at the console
@@ -735,7 +660,7 @@ welcome=http://outworldz.com/Outworldz_installer/Welcome.htm
 ;                       this for all economy related things
 ;economy = ${Const|BaseURL}:${Const|PublicPort}/JOpensim/components/com_opensim/
 ;economy = ${Const|BaseURL):${Const|PublicPort}
-economy=${Const|BaseURL}:${Const|PublicPort}
+economy=${Const|BaseURL}:${Const|ApachePort}/Land
 
 ; web page of grid: optional: page providing further information about your grid
 ;about = ${Const|BaseURL}/about
@@ -969,11 +894,11 @@ SMTP_SERVER_PASSWORD=Some Password
 ;; Set to True to enable Smart Start
 ;; Set by Dreamgrid
 [AutoLoadTeleport]
-Enabled=False
+Enabled=True
 
 ;; For Joomla/jOpensim
 [CapsService]
 AssetService="OpenSim.Services.FSAssetService.dll:FSAssetConnector"
 
 [SmartStart]
-Enabled=False
+Enabled=True
