--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -593,6 +593,7 @@
     </Compile>
     <Compile Include="NativeMethods.vb" />
     <Compile Include="OAR.vb" />
+    <Compile Include="OpensimWorld.vb" />
     <Compile Include="ProcessExtension.vb" />
     <Compile Include="PublicIP.vb" />
     <Compile Include="RandomNumber.vb" />
