drop extra param, mark locations for Smart Start in Opensim

--- a/OutworldzFiles/Opensim/bin/Estates/Estates.ini
+++ b/OutworldzFiles/Opensim/bin/Estates/Estates.ini
@@ -13,7 +13,7 @@
 ; *
 ; * Set in Dreamgrid's Smart Start Screen
 ; *
-Owner=0463cea6-043e-46a9-beff-c90d473a5217
+Owner=
 
 ; Use 0 For Auto increment ID (Recommended). When specifying a specific id, remember it can not be less than 100
 EstateID=1999
