--- a/OutworldzFiles/Opensim/bin/Estates/Estates.ini
+++ b/OutworldzFiles/Opensim/bin/Estates/Estates.ini
@@ -13,7 +13,7 @@
 ; *
 ; * Set in Dreamgrid's Smart Start Screen
 ; *
-Owner=
+Owner=343be151-d580-4620-b005-68b4f3906b16
 
 ; Use 0 For Auto increment ID (Recommended). When specifying a specific id, remember it can not be less than 100
 EstateID=1999
