Enable LightShare http://opensimulator.org/wiki/LsSetWindlightScene

--- a/OutworldzFiles/Opensim/bin/config-include/Proto/OsGrid/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/OsGrid/OpenSim.ini
@@ -972,6 +972,10 @@ MinTimerInterval=0.2
 ;; Default is ./bin/ScriptEngines
 ; ScriptEnginesPath = "ScriptEngines"
 ;
+;
+; Allow the user of LightShare functions
+AllowLightShareFunctions = true
+
 [OSSL]
 ;# {Include-osslEnable} {} {Include file for enabling and permissions for OSSL functions} {}
 ;; Optionally include file to enable OSSL functions and set permissions on who can use which.
