--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Metro/Opensim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Metro/Opensim.ini
@@ -940,6 +940,11 @@ DisableUndergroundMovement=true
 ;; Default is ./bin/ScriptEngines
 ScriptEnginesPath="ScriptEngines"
 MinTimerInterval=0.2
+;
+; Allow the user of LightShare functions
+AllowLightShareFunctions = true
+
+
 [OSSL]
 ;# {Include-osslEnable} {} {Include file for enabling and permissions for OSSL functions} {}
 ;; Optionally include file to enable OSSL functions and set permissions on who can use which.
