--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Region/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Region/OpenSim.ini
@@ -1141,6 +1141,12 @@ KillTimedOutScripts=true
 ;; Path to script engine assemblies
 ;; Default is ./bin/ScriptEngines
 ; ScriptEnginesPath = "ScriptEngines"
+
+;
+; Allow the user of LightShare functions
+AllowLightShareFunctions = true
+
+
 [OSSL]
 ;
 ;# {Include-osslEnable} {} {Include file for enabling and permissions for OSSL functions} {}
