--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -1243,6 +1243,10 @@ KillTimedOutScripts=true
 ; ScriptEnginesPath = "ScriptEngines"
 ;
 ;
+; Allow the user of LightShare functions
+AllowLightShareFunctions = true
+
+
 [OSSL]
 ;
 ;# {Include-osslEnable} {} {Include file for enabling and permissions for OSSL functions} {}
