--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -640,6 +640,7 @@
     <Compile Include="Mysql.vb" />
     <Compile Include="RegionMaker.vb" />
     <Compile Include="Search.vb" />
+    <Compile Include="Services.vb" />
     <Compile Include="Settings.vb" />
     <Compile Include="FormVoice.Designer.vb">
       <DependentUpon>FormVoice.vb</DependentUpon>
