Auto edited by DreamGrid

--- a/OutworldzFiles/Mysql/my.ini
+++ b/OutworldzFiles/Mysql/my.ini
@@ -94,6 +94,7 @@ datadir="C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/Mysql/Data"
 # The default storage engine that will be used when create new tables when
 default-storage-engine=INNODB
 
+# auto-edited by Dreamworld
 # added to make it faster to load by flushing all data so its rare it needs to rescan logs
 innodb_max_dirty_pages_pct=0
 
@@ -166,6 +167,7 @@ read_rnd_buffer_size=256K
 # large settings.
 sort_buffer_size=212K
 
+# auto-edited by Dreamworld
 # If set to 1, InnoDB will flush (fsync) the transaction logs to the
 # disk at each commit, which offers full ACID behavior. If you are
 # willing to compromise this safety, and you are running small
@@ -190,7 +192,7 @@ innodb_log_buffer_size=10M
 # cause paging in the operating system.  Note that on 32bit systems you
 # might be limited to 2-3.5G of user level memory per process, so do not
 # set it too high.
-innodb_buffer_pool_size=10M
+innodb_buffer_pool_size=100M
 
 # Size of each log file in a log group. You should set the combined size
 # of log files to about 25%-100% of your buffer pool size to avoid
