--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
@@ -253,6 +253,8 @@ MapImageServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 ; DisallowForeigners -- HG visitors not allowed
 ; DisallowResidents -- only Admins and Managers allowed
 ; START
+Region_Epic_Citadel_Resized_with_interiors-1X1=DisallowForeigners
+
 ; END
 [MuteListService]
 MuteListServerURI="${Const|PrivURL}:${Const|PrivatePort}"
