Refactor LoadINI to a class

--- a/OutworldzFiles/Opensim/bin/Estates/Estates.ini
+++ b/OutworldzFiles/Opensim/bin/Estates/Estates.ini
@@ -1,4 +1,4 @@
-; * This is an example estate config file.
+﻿; * This is an example estate config file.
 ; *
 ; * If a Region is loaded without an estate, OpenSimulator will ask you configuration questions to create or join an existing estate.
 ; * So there is no need to change this file directly, it is only for reference.
