Drop two dlls from translation as not neded in repo

--- a/OutworldzFiles/Opensim/bin/Estates/Estates.ini
+++ b/OutworldzFiles/Opensim/bin/Estates/Estates.ini
@@ -8,12 +8,13 @@
 ; * You can add multiple estates into one file or make one file per estate
 ; * The section name is the estate name
 ; *
-[SimSurround]
-
 ; *
 ; * Set in Dreamgrid's Smart Start Screen
 ; *
+[SimSurround]
 Owner=
 
-; Use 0 For Auto increment ID (Recommended). When specifying a specific id, remember it can not be less than 100
+; Use 0 For Auto increment ID (Recommended). Set to 1999 in DreamGrid. When specifying a specific id, remember it can not be less than 100
 EstateID=1999
+
+
