--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -579,6 +579,7 @@
     <Compile Include="jOpensim.vb" />
     <Compile Include="Logging.vb" />
     <Compile Include="Builder.vb" />
+    <Compile Include="Maps.vb" />
     <Compile Include="My Project\Resources.cz.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
