--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -1322,6 +1322,7 @@
     <None Include="Resources\welcome_toolbox.png" />
     <None Include="Resources\cubes_blue.png" />
     <None Include="Resources\1253433.png" />
+    <None Include="Resources\12534331.png" />
     <Content Include="Resources\exit.png" />
     <Content Include="Resources\jar.ico" />
     <Content Include="Resources\mail.ico" />
