--- a/OutworldzFiles/Mysql/my.ini
+++ b/OutworldzFiles/Mysql/my.ini
@@ -82,11 +82,11 @@ max_allowed_packet=1073741824
 
 #Path to installation directory. All paths are usually resolved relative to this.
 # auto-edited by Dreamworld
-basedir="C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/Mysql"
+basedir="O:/Opensim/Outworldz DreamGrid Master/DreamWorld/OutworldzFiles/Mysql"
 
 #Path to the database root
 # auto-edited by Dreamworld
-datadir="C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/Mysql/Data"
+datadir="O:/Opensim/Outworldz DreamGrid Master/DreamWorld/OutworldzFiles/Mysql/Data"
 
 # The default character set that will be used when a new schema or table is
 # created and no character set is defined
@@ -105,8 +105,8 @@ innodb_write_io_threads=8
 # allow. One of these connections will be reserved for a user with
 # SUPER privileges to allow the administrator to login even if the
 # connection limit has been reached.
-# 150 is default for Apache, plus 100 for Opensim
-max_connections=250
+# 150 is default for Apache, plus 200 for Opensim
+max_connections=350
 
 # Query cache is used to cache SELECT results and later return them
 # without actual executing the same query once again. Having the query
