--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -221,7 +221,7 @@ PhysicalPrimMax=128
 ;; Maximum number of prims allowable in a linkset. Affects creating new
 ;; linksets. Ignored if less than or equal to zero.
 ;; This can be overridden in the region config file.
-;LinksetPrims = 256
+LinksetPrims = 1024
 ;
 ;# {AllowScriptCrossing} {} {Allow scripts to cross into this region} {true false} true
 ;; Allow scripts to keep running when they cross region boundaries, rather
