--- a/OutworldzFiles/Opensim/bin/config-include/Proto/OsGrid/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/OsGrid/OpenSim.ini
@@ -179,7 +179,7 @@ ClampPrimSize=false
 ;; Maximum number of prims allowable in a linkset. Affects creating new
 ;; linksets. Ignored if less than or equal to zero.
 ;; This can be overridden in the region config file.
-; LinksetPrims = 0
+LinksetPrims = 1024
 ;# {AllowScriptCrossing} {} {Allow scripts to cross into this region} {true false} true
 ;; Allow scripts to keep running when they cross region boundaries, rather
 ;; than being restarted.  State is reloaded on the destination region.
