--- a/OutworldzFiles/Mysql/my.ini
+++ b/OutworldzFiles/Mysql/my.ini
@@ -82,11 +82,11 @@ max_allowed_packet=1073741824
 
 #Path to installation directory. All paths are usually resolved relative to this.
 # auto-edited by Dreamworld
-basedir="C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/Mysql"
+basedir="E:/Outworldz Dreamgrid/OutworldzFiles/Mysql"
 
 #Path to the database root
 # auto-edited by Dreamworld
-datadir="C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/Mysql/Data"
+datadir="E:/Outworldz Dreamgrid/OutworldzFiles/Mysql/Data"
 
 # The default character set that will be used when a new schema or table is
 # created and no character set is defined
@@ -96,7 +96,7 @@ default-storage-engine=INNODB
 
 # auto-edited by Dreamworld
 # added to make it faster to load by flushing all data so its rare it needs to rescan logs
-innodb_max_dirty_pages_pct=0
+innodb_max_dirty_pages_pct=75
 
 # 2x the normal threads = 1024 thing going on
 innodb_write_io_threads=8
@@ -106,7 +106,7 @@ innodb_write_io_threads=8
 # SUPER privileges to allow the administrator to login even if the
 # connection limit has been reached.
 # 150 is default for Apache, plus 200 for Opensim
-max_connections=350
+max_connections=550
 
 # Query cache is used to cache SELECT results and later return them
 # without actual executing the same query once again. Having the query
@@ -176,7 +176,7 @@ sort_buffer_size=212K
 # the log file flushed to disk approximately once per second. Value 2
 # means the log is written to the log file at each commit, but the log
 # file is only flushed to disk approximately once per second.
-innodb_flush_log_at_trx_commit=1
+innodb_flush_log_at_trx_commit=2
 
 # The size of the buffer InnoDB uses for buffering log data. As soon as
 # it is full, InnoDB will have to flush it to disk. As it is flushed
