--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -1660,14 +1660,12 @@ announce_entering = "{0} enters {1} (now {2} visitors in this region)"
 ; avatar leaving message using format substitution: {0} avatar name, {1} region name, {2} number of avatars
 announce_leaving = "{0} leaves {1} (back to {2} visitors in this region)"	
 ;
-; The URL where avatar counts and lists will be sent.
-;broker="http://localhost:${Const|DiagnosticsPort}/broker/{0}/{1}/{2}"
 ;
 ; Number of seconds to timeout a broker post request
-;broker_timeout=5
+broker_timeout=5
 ;
 ; password for updating the welcome message templates via XmlRpc
-;password = SECRET
+password = 
 ;
 ; regex specifying for which regions concierge service is desired; if
 ; empty, then for all
@@ -1687,6 +1685,7 @@ regions = ""
 ; {0} is replaced with the region's name
 ; {1} is replaced with the region's UUID
 ;broker = "http://broker.place.com/{1}"
+broker="http://127.0.0.1:${Const|DiagnosticsPort}/broker/{0}/{1}/{2}"
 ;
 ;
 [ClientStack.LindenUDP]
