Chat to speech announcer

--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -1685,7 +1685,7 @@ regions = ""
 ; {0} is replaced with the region's name
 ; {1} is replaced with the region's UUID
 ;broker = "http://broker.place.com/{1}"
-broker="http://127.0.0.1:${Const|DiagnosticsPort}/broker/{0}/{1}/{2}"
+;broker="http://127.0.0.1:${Const|DiagnosticsPort}/broker/{0}/{1}"
 ;
 ;
 [ClientStack.LindenUDP]
@@ -1724,7 +1724,7 @@ ReuseDynamicTextures = true
 ; Only set this to true if you are sure that all the viewers using your simulator will not suffer from this problem.
 ; This setting only has an affect if ReuseDynamicTextures = true
 ; Default is false
-ReuseDynamicLowDataTextures = false
+ReuseDynamicLowDataTextures = true
 
 [eZombie]
 
