--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -54,7 +54,7 @@ ApachePort=80
 
 ;
 ;Password from DYN DNS
-MachineID=207273216
+MachineID=308704480
 
 ;
 ; * The startup section lists all the connectors to start up in this server
@@ -376,7 +376,6 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; Set by Dreamgrid
 ;;
 ; START  <= Leave this line
-Region_Smart1000=Persistent
 Region_Welcome=DefaultRegion,  DefaultHGRegion
 
 ; END  <= Leave this line
@@ -894,7 +893,7 @@ SMTP_SERVER_PASSWORD=Some Password
 ;; Set to True to enable Smart Start
 ;; Set by Dreamgrid
 [SmartStart]
-Enabled=True
+Enabled=False
 
 ;; For Joomla/jOpensim
 [CapsService]
